--- a/todo/templates/todo/currenttodo.html
+++ b/todo/templates/todo/currenttodo.html
@@ -5,11 +5,11 @@
 Current
 
 <ul>
-  {% for todo in todos %}
-  <li>{{ todo.title }}</li>
+  {%  for todo in todos %}
+  <li> {% if todo.important  %}<b>{% endif %}{{ todo.title }}{% if todo.important  %}</b>{% endif %} {% if todo.memo  %} - {{ todo.memo }} {% endif%} </li>
 
   {% endfor %}
 </ul>
 
 
-{%  endblock %}
+{% endblock %}
